-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Unsafe assignment operator
This user-written assignment operator does not check for self-assignment. If an object of this type is assigned to itself use-after-free errors may occur if the class owns resources. Assignment operator does not check for self-assignment
/data/mci/58fd14856d2dbbbec49d65ec6a1b6796/bazel_cache/33d18d311b7c0cb8812477a320550d4d/execroot/_main/src/mongo/db/exec/multi_plan_bucket.cpp:124: SELF_ASSIGN 174780 No protection against the object assigning to itself.