SERVER-105893 Add self-assignment check in MultiPlanBucket (#37046)

GitOrigin-RevId: 865fed1b79f02660f73d9c591813c4e1f726646d